; ModuleID = '/home/carl/AnghaBench/git/extr_parse-options-cb.c_parse_opt_commits.c'
source_filename = "/home/carl/AnghaBench/git/extr_parse-options-cb.c_parse_opt_commits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32 }
%struct.object_id = type { i32 }
%struct.commit = type { i32 }

@.str = private unnamed_addr constant [25 x i8] c"malformed object name %s\00", align 1
@the_repository = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"no such commit %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_opt_commits(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.option*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.object_id, align 4
  %9 = alloca %struct.commit*, align 8
  store %struct.option* %0, %struct.option** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @BUG_ON_OPT_NEG(i32 %10)
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %36

15:                                               ; preds = %3
  %16 = load i8*, i8** %6, align 8
  %17 = call i64 @get_oid(i8* %16, %struct.object_id* %8)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @error(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %20)
  store i32 %21, i32* %4, align 4
  br label %36

22:                                               ; preds = %15
  %23 = load i32, i32* @the_repository, align 4
  %24 = call %struct.commit* @lookup_commit_reference(i32 %23, %struct.object_id* %8)
  store %struct.commit* %24, %struct.commit** %9, align 8
  %25 = load %struct.commit*, %struct.commit** %9, align 8
  %26 = icmp ne %struct.commit* %25, null
  br i1 %26, label %30, label %27

27:                                               ; preds = %22
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @error(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %28)
  store i32 %29, i32* %4, align 4
  br label %36

30:                                               ; preds = %22
  %31 = load %struct.commit*, %struct.commit** %9, align 8
  %32 = load %struct.option*, %struct.option** %5, align 8
  %33 = getelementptr inbounds %struct.option, %struct.option* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @commit_list_insert(%struct.commit* %31, i32 %34)
  store i32 0, i32* %4, align 4
  br label %36

36:                                               ; preds = %30, %27, %19, %14
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i64 @get_oid(i8*, %struct.object_id*) #1

declare dso_local i32 @error(i8*, i8*) #1

declare dso_local %struct.commit* @lookup_commit_reference(i32, %struct.object_id*) #1

declare dso_local i32 @commit_list_insert(%struct.commit*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
